crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_Legacy_`ParamSpec`_-_Validating_`ParamSpe…_(648be2a43987ffd8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - Legacy `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/paramspec.md
---

# Python source files

## library.py

```
1 | from typing import ParamSpec
2 | 
3 | LibraryP = ParamSpec("LibraryP")
```

## main.py

```
 1 | import library
 2 | from typing import Any, Final, ParamSpec, Callable, Concatenate, Protocol, Generic, Union, Optional, Annotated
 3 | 
 4 | P = ParamSpec("P")
 5 | 
 6 | class ValidProtocol(Protocol[P]):
 7 |     def method(self, c: Callable[P, int]) -> None: ...
 8 | 
 9 | class ValidGeneric(Generic[P]):
10 |     def method(self, c: Callable[P, int]) -> None: ...
11 | 
12 | def valid(
13 |     a1: Callable[P, int],
14 |     a2: Callable[Concatenate[int, P], int],
15 |     a3: Callable["P", int],
16 |     a4: Callable[Concatenate[int, "P"], int],
17 |     a5: Callable[library.LibraryP, int],
18 |     a6: Callable["Concatenate[int, P]", int],
19 |     a7: Callable["library.LibraryP", int],
20 | ) -> None: ...
21 | def invalid(
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a1: P,
24 |     # TODO: this should cause us to emit an error because a `ParamSpec` type argument
25 |     # cannot be used to specialize a non-`ParamSpec` type parameter
26 |     a2: list[P],
27 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 |     a3: Callable[[P], int],
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a4: Callable[..., P],
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a5: Callable[Concatenate[P, ...], int],
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a6: P | int,
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a7: Union[P, int],
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a8: Optional[P],
39 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
40 |     a9: Annotated[P, "metadata"],
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a10: Callable["[int, str]", str],
43 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
44 |     a11: Callable["...", int],
45 | ) -> None: ...
46 | 
47 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
48 | def invalid_return() -> P:
49 |     raise NotImplementedError
50 | 
51 | def invalid_variable_annotation(y: Any) -> None:
52 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
53 |     x: P = y
54 | 
55 | def invalid_with_qualifier(y: Any) -> None:
56 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
57 |     x: Final[P] = y
58 | 
59 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
60 | def invalid_stringified_return() -> "P":
61 |     raise NotImplementedError
62 | 
63 | def invalid_stringified_annotation(
64 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
65 |     a: "P",
66 | ) -> None: ...
67 | def invalid_stringified_variable_annotation(y: Any) -> None:
68 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
69 |     x: "P" = y
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:23:9
   |
21 | def invalid(
22 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
23 |     a1: P,
   |         ^
24 |     # TODO: this should cause us to emit an error because a `ParamSpec` type argument
25 |     # cannot be used to specialize a non-`ParamSpec` type parameter
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:28:19
   |
26 |     a2: list[P],
27 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 |     a3: Callable[[P], int],
   |                   ^
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:30:23
   |
28 |     a3: Callable[[P], int],
29 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
30 |     a4: Callable[..., P],
   |                       ^
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:32:30
   |
30 |     a4: Callable[..., P],
31 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
32 |     a5: Callable[Concatenate[P, ...], int],
   |                              ^
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a6: P | int,
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:34:9
   |
32 |     a5: Callable[Concatenate[P, ...], int],
33 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
34 |     a6: P | int,
   |         ^
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a7: Union[P, int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:36:15
   |
34 |     a6: P | int,
35 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 |     a7: Union[P, int],
   |               ^
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a8: Optional[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:38:18
   |
36 |     a7: Union[P, int],
37 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
38 |     a8: Optional[P],
   |                  ^
39 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
40 |     a9: Annotated[P, "metadata"],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:40:19
   |
38 |     a8: Optional[P],
39 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
40 |     a9: Annotated[P, "metadata"],
   |                   ^
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a10: Callable["[int, str]", str],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`
  --> src/main.py:42:19
   |
40 |     a9: Annotated[P, "metadata"],
41 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
42 |     a10: Callable["[int, str]", str],
   |                   ^^^^^^^^^^^^
43 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
44 |     a11: Callable["...", int],
   |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`
  --> src/main.py:44:19
   |
42 |     a10: Callable["[int, str]", str],
43 |     # error: [invalid-type-form] "The first argument to `Callable` must be either a list of types, ParamSpec, Concatenate, or `...`"
44 |     a11: Callable["...", int],
   |                   ^^^^^
45 | ) -> None: ...
   |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:48:25
   |
47 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
48 | def invalid_return() -> P:
   |                         ^
49 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:53:8
   |
51 | def invalid_variable_annotation(y: Any) -> None:
52 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
53 |     x: P = y
   |        ^
54 |
55 | def invalid_with_qualifier(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:57:14
   |
55 | def invalid_with_qualifier(y: Any) -> None:
56 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
57 |     x: Final[P] = y
   |              ^
58 |
59 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:60:38
   |
59 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
60 | def invalid_stringified_return() -> "P":
   |                                      ^
61 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:65:9
   |
63 | def invalid_stringified_annotation(
64 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
65 |     a: "P",
   |         ^
66 | ) -> None: ...
67 | def invalid_stringified_variable_annotation(y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a type expression
  --> src/main.py:69:9
   |
67 | def invalid_stringified_variable_annotation(y: Any) -> None:
68 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
69 |     x: "P" = y
   |         ^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```
